(lang dune 3.16)

(name combobulate_oxcaml)

(generate_opam_files true)

(source
 (github lyrm/combobulate-oxcaml))

(authors "lyrm <carine@tarides.com>")

(maintainers "lyrm <carine@tarides.com>")

(license ISC)

(package
 (name combobulate_oxcaml)
 (synopsis "A short description of combobulate_oxcaml")
 (description "A longer description of combobulate_oxcaml")
 (depends
  (ocaml
   (>= 5.2.0))))
